# GenCheck

./: .#.gitignore  .gitignore  README.md  gencheck.cabal
Test/: GenCheck.lhs  SimpleCheck.lhs
Test/.svn/: all-wcprops  entries
Test/GenCheck/: PureTest.lhs  Test
Test/GenCheck/.svn/: all-wcprops  entries
Test/GenCheck/.svn/text-base/: LICENSE.txt.svn-base
Test/GenCheck/Base/: Base.lhs  Datum.lhs  LabelledPartition.lhs  Memoize.lhs  Verdict.lhs
Test/GenCheck/Base/.svn/: all-wcprops  entries
Test/GenCheck/Cabal/: TestFramework.lhs
Test/GenCheck/Compatibility/.svn/: all-wcprops  entries
Test/GenCheck/Experiment/: Descriptor.lhs  MapleCombTest.lhs
Test/GenCheck/Experiment/.svn/: all-wcprops  entries
Test/GenCheck/Generator/: BaseEnum.lhs  BaseGens.lhs  EnumStrat.lhs  Enumeration.lhs  Generator.lhs  StructureGens.lhs  Substitution.lhs
Test/GenCheck/Generator/.svn/: all-wcprops  entries
Test/GenCheck/System/: Result.lhs  SimpleCheck.lhs  TestSuite.lhs
Test/GenCheck/System/.svn/: all-wcprops  entries
Test/GenCheck/Tests/: BinTree_GC.lhs  Install.lhs  Properties_SortBinT.lhs  PureTest.lhs  SortBinTree.lhs  TestReverseList.lhs  Test_BaseInt.lhs  Test_sortBinT.lhs
Test/GenCheck/Tests/.svn/: all-wcprops  entries
Test/GenCheck/Tests/ListZipper/: ListZipper.hs  ListZipper_GC.lhs  PropListZip.lhs  TestListZipper.lhs
Test/GenCheck/Tests/SortBinTree/: BinTree_GC.lhs  (+4 more)
Thesis/: abstract.tex  algdatatype.tex  combconstructs.tex  combenumgen.tex  complexgen.tex  definitions.tex  enumhaskadt.tex  feat_enum.tex  formal_pbt.tex  formal_strategy.tex  generators.tex  genericprog-refs.bib  gensubst.tex  introduction.tex  iterenum.tex  jrl_thesis.sty  literate-haskell.tex  mathdef.tex  outline.tex  pbt.tex  pbt_sys_spec.tex  pbtsystems.tex  requirements.tex  samplegen.tex  samplenum.tex  samplestrat.tex  sampling_theory.tex  species-refs.bib  speciesmacros.tex  swtest.tex  test_ref.bib  testsys_macros.tex  thesis.tex
tutorial/: .tex  GenCheck_Tutorial.tex  Tut_MainDoc.tex  Tutorial.tex  code.sty
tutorial/.svn/: all-wcprops  entries
tutorial/.svn/text-base/: Tutorial.tex.svn-base
tutorial/decimal/: Decimal_GC.hs  Decimal_GC.lhs
tutorial/list_zipper/: ListZipper.hi  ListZipper_GC.hi  ListZipper_GC.lhs  PropListZip.hi  PropListZip.lhs  TestListZipper.hi  TestListZipper.lhs  Test_ListZipper.hs
tutorial/list_zipper/.svn/: entries
tutorial/reverse/: TestReverseList.hi  TestReverseList.lhs
tutorial/reverse/.svn/: entries
(+23 files in other folders)
