name:           gencheck
version:        0.1
cabal-version:  >= 1.6
license:        BSD3
license-file:   License.txt
stability:      experimental
author:         Gordon J. Uszkay <uszkaygj@mcmaster.ca>
maintainer:     Gordon J. Uszkay <uszkaygj@mcmaster.ca>
category:       Testing
synopsis:       A library of test programs and test data generators inspired by QuickCheck.
build-type:     Simple
tested-with:    GHC == 7.0.4

description:
        This library provides programs for unit testing Haskell functions
	against Boolean properties, similar to QuickCheck, but allowing 
        different test data generation strategies for different structures,
	and even within the same structure using composition strategies.
	Reporting, test case scheduling and data generation modules can be
	assembled to customize the test program based on the situation.
        It includes a Template Haskell function for deriving
        test data generators for regular polynomial algebraic datatypes.
        .
	Test data generation is based on combinatorial theory 
	and uses explicit enumeration of regular polynomial types, 
	combined with heuristic selection strategies to build data generators.
	Generators can be composed or combined in parallel to create
	composite strategies for data sampling.

library
  build-depends:        combinat >= 0.2,
                        base >=3 && <5,
                        random > 1.0.0.0,
                        containers >= 0.4.0.0,
                        transformers >= 0.2,
                        memoize >= 0.3,
                        template-haskell >=2,
                        ieee >= 0.7

  ghc-options:          -Wall -fno-warn-orphans

  exposed-modules:
    Test.GenCheck
    Test.GenCheck.System.SimpleCheck
    Test.GenCheck.System.Result
    Test.GenCheck.Generator.Generator
    Test.GenCheck.Generator.Substitution
--    Test.GenCheck.Generator.Composition
    Test.GenCheck.Generator.StructureGens
    Test.GenCheck.Generator.BaseGens
    Test.GenCheck.Generator.EnumStrat
    Test.GenCheck.Generator.BaseEnum
    Test.GenCheck.Generator.Enumeration
    Test.GenCheck.Base.Base
    Test.GenCheck.Base.Datum
    Test.GenCheck.Base.Verdict
    Test.GenCheck.Base.LabelledPartition
    Test.GenCheck.System.TestSuite

  other-modules:


-- source-repository head
--   type:                 
--   location:             
